@@ -25351,6 +25351,11 @@ void menu_setting_fileviewer_hex(MENU_ITEM_PARAMETERS)
     menu_file_viewer_always_hex.v ^=1;
 }
 
+void menu_setting_filesel_allow_delete_folders(MENU_ITEM_PARAMETERS)
+{
+    menu_filesel_utils_allow_folder_delete.v ^=1;
+}
+
 void menu_fileselector_settings(MENU_ITEM_PARAMETERS)
 {
     menu_item *array_menu_comon;
@@ -25363,15 +25368,15 @@ void menu_fileselector_settings(MENU_ITEM_PARAMETERS)
         menu_add_item_menu_inicial_format(&array_menu_comon,MENU_OPCION_NORMAL,menu_setting_filesel_no_show_dirs,NULL,"[%c] Show ~~directories",
             (menu_filesel_hide_dirs.v==0 ? 'X' : ' ') );
         menu_add_item_menu_shortcut(array_menu_comon,'d');	
-        menu_add_item_menu_tooltip(array_menu_comon,"Hide directories from file selector menus");
-        menu_add_item_menu_ayuda(array_menu_comon,"Hide directories from file selector menus. "
+        menu_add_item_menu_tooltip(array_menu_comon,"Hide directories from file browser menus");
+        menu_add_item_menu_ayuda(array_menu_comon,"Hide directories from file browser menus. "
                                 "Useful on demo environments and you don't want the user to be able to navigate the filesystem");
 
         menu_add_item_menu_format(array_menu_comon,MENU_OPCION_NORMAL,menu_setting_filesel_no_show_size,NULL,"[%c] Show file ~~size",
             (menu_filesel_hide_size.v==0 ? 'X' : ' ') );
         menu_add_item_menu_shortcut(array_menu_comon,'s');    
         menu_add_item_menu_tooltip(array_menu_comon,"Hide file size from file selector menus");
-        menu_add_item_menu_ayuda(array_menu_comon,"Hide file size from file selector menus");      
+        menu_add_item_menu_ayuda(array_menu_comon,"Hide file size from file browser menus");      
 
         menu_add_item_menu_format(array_menu_comon,MENU_OPCION_NORMAL,menu_setting_filesel_previews,NULL,"[%c] Show file ~~previews",
             (menu_filesel_show_previews.v ? 'X' : ' ') );
@@ -25388,6 +25393,11 @@ void menu_fileselector_settings(MENU_ITEM_PARAMETERS)
         menu_add_item_menu_ayuda(array_menu_comon,"File viewer always shows file contents in hexadecimal+ascii");
 
 
+        menu_add_item_menu_format(array_menu_comon,MENU_OPCION_NORMAL,menu_setting_filesel_allow_delete_folders,NULL,"[%c] Allow ~~folder delete",
+            (menu_filesel_utils_allow_folder_delete.v ? 'X' : ' ') );
+        menu_add_item_menu_shortcut(array_menu_comon,'f');
+        menu_add_item_menu_tooltip(array_menu_comon,"Allows deleting folders on the file utilities browser. Enable it AT YOUR OWN RISK");
+        menu_add_item_menu_ayuda(array_menu_comon,"Allows deleting folders on the file utilities browser. Enable it AT YOUR OWN RISK");
 
                    
 
